fixed website name

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
       name="Shamiyeh PM Consult LLC©"
       content="Web site created using create-react-app"
     />
-    <meta property="og:title" content="Harikrushn | Portfolio" />
+    <meta property="og:title" content="Shamiyeh PM Consult LLC©" />
     <meta property="og:type" content="website" />
 
     
